<resources>
    <string name="app_name">Registration Form</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re Enter Password</string>
    <string name="registration">Registration</string>
    <string name="submit">Submit</string>
</resources>